# VectorForge

./: .env.example  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  pyproject.toml
.github/instructions/: .instructions.md
docs/: README.md  evaluation-module.md
planning/: architecture-plan-v0.1.md  phase-1-foundation.md  phase-2-core-pipeline.md  phase-3-rag-pipeline.md  phase-4-polish-extend.md  phase-5-api-ui.md  phase-6-evaluation-module.md
tests/: conftest.py
tests/fixtures/: mock_embeddings.py
tests/unit/: test_config.py  test_models.py  test_monitoring.py  test_repositories.py
vectorforge/: __init__.py  __main__.py  exceptions.py
vectorforge/config/: __init__.py  defaults.py  settings.py
vectorforge/db/: __init__.py  engine.py
vectorforge/db/migrations/: env.py  script.py.mako
vectorforge/db/migrations/versions/: 001_initial_schema.py
vectorforge/db/repositories/: __init__.py  base.py  chunk_repo.py  collection_repo.py  document_repo.py  embedding_repo.py  query_log_repo.py
vectorforge/models/: __init__.py  db.py  domain.py
vectorforge/monitoring/: __init__.py  decorators.py  health.py  logging.py  metrics.py
